<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SUTA</string>
    <string name="action_settings">Settings</string>
    <string name="action_userList">User list</string>
    <string name="remainingCredits">Remaining credits:</string>
    <string name="updatedAt">Update sent by hub at:</string>
    <string name="transactions">Transactions:</string>

    <!-- abhishek for build details intial values are place holders -->
    <string name="app_build_date">20170819</string>
    <string name="app_build_ctx">nic-ThinkPad /home/nic/swifiic/repo/plat/app/suta/andi nic</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download_app">Download App</string>
    <string name="generic_app_text">Generic App</string>
    <string name="generic_app_description_text">Generic App Description</string>
    <string name="current_balance_text">Current Balance</string>

</resources>
