<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="4dp"
        android:layout_marginTop="21dp"
        android:layout_weight="1"
        android:src="@android:drawable/sym_def_app_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/appIcon"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/generic_app_text"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/appDescription"
            android:layout_width="403dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/generic_app_description_text"
            android:textSize="18sp" />

        <Button
            android:id="@+id/downloadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/download_app" />
    </LinearLayout>
</RelativeLayout>