<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="127dp"
        android:layout_height="127dp"
        android:contentDescription="SWiFiIC Logo"
        android:scaleType="fitXY"
        android:src="@drawable/swifiic_logo"
        android:layout_weight="0.13"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignLeft="@+id/swifficver"
        android:layout_alignStart="@+id/swifficver"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="SUTA v0.1"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/swifficver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:layout_toEndOf="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:text="SWiFiIC Vers: 0.1" />

    <TextView
        android:text="@string/updatedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_above="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:id="@+id/textView5" />

    <TextView
        android:id="@+id/currTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        android:textSize="18dp"
        android:layout_toEndOf="@+id/appname"
        android:layout_alignTop="@+id/textView5"
        android:layout_toRightOf="@+id/appname" />



    <TextView
        android:text="@string/remainingCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20dp"
        android:id="@+id/textView"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/remainingCredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" "
        android:textSize="18dp"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:text="@string/transactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="20dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView3" />

    <TextView
        android:id="@+id/transactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:maxLines="6"
        android:scrollbars="vertical"
        android:text=" "
        android:textSize="18dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/transactions"
        android:layout_marginTop="75dp"
        android:layout_toLeftOf="@+id/remainingCredit"
        android:layout_toStartOf="@+id/remainingCredit"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="Msngr" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="Bromide" />

    </RadioGroup>

    <Button
        android:id="@+id/downloadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radioGroup"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_toEndOf="@+id/radioGroup"
        android:layout_toRightOf="@+id/radioGroup"
        android:text="Download" />


</RelativeLayout>